# src/controllers/user.controller.js
@@ -9,6 +9,24 @@ async function me(req, res, next) {
   }
 }
 
+async function myOrganizations(req, res, next) {
+  try {
+    const orgs = await userService.listMyOrganizations(req.user._id);
+    res.json({ data: orgs });
+  } catch (err) {
+    next(err);
+  }
+}
+
+async function updateMe(req, res, next) {
+  try {
+    const user = await userService.updateProfile(req.user._id, req.body);
+    res.json({ data: user });
+  } catch (err) {
+    next(err);
+  }
+}
+
 async function listMembers(req, res, next) {
   try {
     const { organizationId } = req.params;
@@ -35,4 +53,4 @@ async function updateMember(req, res, next) {
   }
 }
 
-module.exports = { me, listMembers, updateMember };
+module.exports = { me, myOrganizations, updateMe, listMembers, updateMember };
